combining css files

--- a/about.html
+++ b/about.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <meta name-"viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/about_style.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <link href="https://fonts.googleapis.com/css?family=Handlee|Roboto:300" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+    <title>Emily Chadwick</title>
 
   <!--[if lt IE 9]>
   <script src="dist/html5shiv.js"></script>
@@ -14,21 +18,19 @@
 
   </head>
 
-  <title>Emily Chadwick</title>
-
   <body>
 
-    <div class="container">
+    <div class="container-about">
 
-      <div class="header">
+      <div class="header-about">
         <h1>About Me</h1>
       </div> <!--end header -->
 
-      <div class="image column">
-        <img src="img/about.jpg" alt="about" id="about">
-      </div> <!--end image -->
+      <div class="image-about column">
+        <img src="img/about.jpg" alt="about" id="about-image">
+      </div><!--end image -->
 
-      <div class="intro column">
+      <div class="intro-about column-about">
         <h2>Hi, there.</h2>
 
         <!-- <p>Just a little text.</p> -->
@@ -37,11 +39,11 @@
 
       </div> <!--end intro-->
 
-      <div class="skills column">
+      <div class="skills-about column-about">
 
         <h3>Things I'm Good At</h3>
 
-          <ul id="skill list">
+          <ul id="skills-list-about">
             <li>Web Development</li>
             <li>Photoshop</li>
             <li>Project Management</li>
@@ -53,12 +55,16 @@
 
       </div><!--end skills-->
 
-      <div class="main-text">
+      <div class="main-about">
         <h3>Still Interested?</h3>
 
           <p>I currently work in field known as association management, which is management for non-profit organizations. As a manager, I approve website designs, email templates, plan events, and more. While I enjoy the work that I do, there was a small, but nagging voice in the back of my head telling me that I didn't just need to approve websites, but that I could create them! I didn't need to make content for emails and newsletters, I could code how they looked. So, I decided to take the leap.</p>
 
           <p>When not at work, or studying for my new career, I like to stay active! Living in Seattle brings all sorts of perks, including great hiking and biking trails, an easily accesible coast, and great craft ciders. I'm also an avid (and excellent) baker, love old-school hip-hop, and can quote the West Wing from start to finish.<p>
+
+      <div class="back">
+        <h6><a href="index.html">Back to Main</a> | <a href="contact.html">Contact</h6>
+      </div>
 
       </div><!--end main-text-->
     </div> <!--end container -->
