--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Custom styles for this template  sgo here -->
     <link rel="stylesheet" href="css/styles.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Handlee|Roboto:300" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -26,33 +27,33 @@
   <body>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron-index">
 
-      <div class="container">
+      <div class="container-index">
         <h1>Emily Chadwick</h1>
-        <p>Welcome! I am a Seattle based software developer.<br>I am also an excellent baker, and can quote the West Wing verbatim.</p>
-        <a href="about.html">About</a>
+        <p id="welcome-index">Welcome! I am a Seattle based software developer.<br>I am also an excellent baker, and can quote the West Wing verbatim.</p>
+        <a href="about.html">About </a> | <a href="contact.html"> Contact</a>
       </div>
 
-      <div class="container">
+      <div class="container-index">
       </div><!-- /container -->
 
     </div><!-- /jumbotron -->
 
-    <div class="container">
+    <div class="container-index">
       <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
+      <div class="row-index">
+        <div class="col-md-4 column-index">
           <h2>Portfolio Concept</h2>
           <p>I currently work as a non-profit manager, doing a little bit of everything, including the design and basic build out of web pages. My portfolio will primarily focus on new work, as development is a whole new ballgame.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /col -->
-        <div class="col-md-4">
+        <div class="col-md-4 column-index">
           <h2>Project Goals</h2>
-          <p>Though my expected graduation date is May 19, 2017 - my goal is to finish this course no later than May 1, almost three weeks ahead of schedule. As I work full-time, I plan to commit 20 - 25 hours per week to studying, but will study more when time is available.</p>
+          <p>Though my expected graduation date is May 19, 2017 - my goal is to finish this course no later than May 1, almost three weeks ahead of schedule. As I work full-time, I plan to commit 20 - 25 hours per week to studying.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div><!-- /col -->
-        <div class="col-md-4">
+        <div class="col-md-4 column-index">
           <h2>Course Goals</h2>
           <p>I am using this course so that I can change careers. Seattle is a huge tech hub, and I want in on the fun! After this course, my goal is to be hired as a junior developer, preferrably front-end. Eventually, I'd like to be able to freelance.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
