--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Handlee|Roboto:300" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
 
     <title>Emily Chadwick</title>
 
@@ -26,11 +26,15 @@
         <h1>About Me</h1>
       </div> <!--end header -->
 
-      <div class="image-about column">
+      <!--<div class="image column-about image-about">
         <img src="img/about.jpg" alt="about" id="about-image">
-      </div><!--end image -->
+      </div>--> <!--end image -->
 
-      <div class="intro-about column-about">
+    </div> <!--end container -->
+
+    <div class="row-about">
+
+      <div class="intro column-about">
         <h2>Hi, there.</h2>
 
         <!-- <p>Just a little text.</p> -->
@@ -39,11 +43,11 @@
 
       </div> <!--end intro-->
 
-      <div class="skills-about column-about">
+      <div class="skills column-about">
 
         <h3>Things I'm Good At</h3>
 
-          <ul id="skills-list-about">
+          <ul id="skills-list">
             <li>Web Development</li>
             <li>Photoshop</li>
             <li>Project Management</li>
@@ -55,7 +59,9 @@
 
       </div><!--end skills-->
 
-      <div class="main-about">
+    </div><!--end row-about-->
+
+      <div class="main-text">
         <h3>Still Interested?</h3>
 
           <p>I currently work in field known as association management, which is management for non-profit organizations. As a manager, I approve website designs, email templates, plan events, and more. While I enjoy the work that I do, there was a small, but nagging voice in the back of my head telling me that I didn't just need to approve websites, but that I could create them! I didn't need to make content for emails and newsletters, I could code how they looked. So, I decided to take the leap.</p>
@@ -67,7 +73,7 @@
       </div>
 
       </div><!--end main-text-->
-    </div> <!--end container -->
+
   </body>
 
 </html>
