--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
     <!-- Bootstrap core CSS -->
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
 
     <!-- Custom styles for this template  sgo here -->
     <link rel="stylesheet" href="css/styles.css">
