--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
 
     <!-- Custom styles for this template  sgo here -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/contact_style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Handlee|Roboto:300" rel="stylesheet">
 
@@ -25,6 +25,16 @@
   </head>
 
   <body>
+
+    <div class="nav-about">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+
+    </div><!--end nav-->
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron-contact">
