--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
   <body>
 
-    <div class="nav-about">
+    <div class="nav-contact">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
