--- a/about.html
+++ b/about.html
@@ -2,13 +2,13 @@
 <html lang=“en”>
   <head>
     <meta charset="utf-8">
-    <meta name-"viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/about_style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://fonts.googleapis.com/css?family=Handlee|Roboto:300" rel="stylesheet">
 
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="css/about_style.css">
 
     <title>Emily Chadwick</title>
 
@@ -24,6 +24,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
+        <li><a href="faq.html">FAQs</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -79,10 +80,22 @@
           <p>When not at work, or studying for my new career, I like to stay active! Living in Seattle brings all sorts of perks, including great hiking and biking trails, an easily accesible coast, and great craft ciders. I'm also an avid (and excellent) baker, love old-school hip-hop, and can quote the West Wing from start to finish.<p>
 
       <div class="back">
-        <h6><a href="index.html">Back to Main</a> | <a href="contact.html">Contact</h6>
+        <h6><a href="index.html">Back to Main</a> | <a href="contact.html">Contact</a></h6>
       </div>
 
       </div><!--end main-text-->
+
+      <!-- ============================= -->
+      <!-- All your JavaScript comes now -->
+      <!-- ============================= -->
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+      <!-- Bootstrap core JS -->
+
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <!-- Can place script tags with JavaScript files here -->
 
   </body>
 
