--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
 
     <!-- Bootstrap core CSS -->
 
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- Custom styles for this template  sgo here -->
-    <link rel="stylesheet" href="css/contact_style.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <link href="https://fonts.googleapis.com/css?family=Handlee|Roboto:300" rel="stylesheet">
 
@@ -30,6 +30,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="faq.html">FAQs</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -37,13 +38,13 @@
     </div><!--end nav-->
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron-contact">
+    <div class="main-contact">
 
-      <div class="container-contact">
+      <div class="box-contact">
         <h1>Let's Chat</h1>
       </div>
 
-      <div class="container-contact">
+      <div class="box-contact">
       </div><!-- /container -->
 
     </div><!-- /jumbotron -->
@@ -58,26 +59,31 @@
 
       <div class="connect-contact column-contact">
         <h2>Connect</h2>
-        <p>Email: emilyann.chadwick@gmail.com<br>Phone: (206) 359-5393</p>
-        <p>Location: Seattle, WA<br>
-        United States</p>
+        <span class="glyphicon glyphicon-envelope"></span> emilyann.chadwick@gmail.com<br>
+        <p><span class="glyphicon glyphicon-phone-alt"></span> (206) 359-5393</p>
+        <span class="glyphicon glyphicon-map-marker"></span> Seattle, WA<br>
+        <p> United States</p>
 
       </div><!-- /col -->
 
     </div><!--row -->
 
-      <div class="back">
+      <!-- <div class="back">
         <h6><a href="index.html">Back to Main </a>
         |
         <a href="about.html"> About</a></h6>
 
-      </div><!--back-->
+      </div> --> <!--back-->
 
     <!-- ============================= -->
     <!-- All your JavaScript comes now -->
     <!-- ============================= -->
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
     <!-- Bootstrap core JS -->
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <!-- Can place script tags with JavaScript files here -->
 
