--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
     <!-- All your JavaScript comes now -->
     <!-- ============================= -->
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
     <!-- Bootstrap core JS -->
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <!-- Can place script tags with JavaScript files here -->
 
