--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
 
     <div class="panel panel-default">
 
-      <div class="panel-header">
+      <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><span class="glyphicon glyphicon-plus"></span>
           Why did you decide to switch careers?
@@ -47,7 +47,7 @@
 
     <div class="panel panel-default">
 
-      <div class="panel-header">
+      <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><span class="glyphicon glyphicon-plus"></span>
           Why web development?
@@ -65,7 +65,7 @@
 
     <div class="panel panel-default">
 
-      <div class="panel-header">
+      <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><span class="glyphicon glyphicon-plus"></span>
           What types of clients do you work with?
@@ -83,7 +83,7 @@
 
     <div class="panel panel-default">
 
-      <div class="panel-header">
+      <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour"><span class="glyphicon glyphicon-plus"></span>
           What is your average turnaround time?
@@ -101,7 +101,7 @@
 
     <div class="panel panel-default">
 
-      <div class="panel-header">
+      <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive"><span class="glyphicon glyphicon-plus"></span>
           Why should I hire you?
