--- a/index.html
+++ b/index.html
@@ -26,34 +26,85 @@
 
   <body>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <!-- Main jumbotron for a primary marketing message or call to action
+    <div class="jumbotron">-->
 
-      <div class="container">
+      <div class="container-fluid">
+
+        <div class="nav">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="faq.html">FAQs</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div><!--end nav-->
+
+        <div id="carousel-index" class="carousel slide" data-ride="carousel">
+
+          <!--Indicators-->
+          <ol class="carousel-indicators">
+            <li data-target="#bridge" data-slide-to="0" class="active"></li>
+            <li data-target="#girl-book" data-slide-to="1" class="active"></li>
+            <li data-target="#retro-car" data-slide-to="2" class="active"></li>
+          </ol> <!--end carousel-indicators-->
+
+          <!--Wrapper for slides-->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="img/bridge.jpg" alt="Brooklyn Bridge">
+              <div class="carousel-caption">
+              </div>
+            </div>
+            <div class="item">
+              <img src="img/girl-book.jpg" alt="Girl with Book">
+              <div class="carousel-caption">
+              </div>
+            </div>
+            <div class="item">
+              <img src="img/retro-car.jpg" alt="Slugbug">
+              <div class="carousel-caption">
+              </div>
+            </div>
+          </div> <!--end wrapper-->
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-index" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-index" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+
+        </div>
+
         <h1>Emily Chadwick</h1>
         <p id="welcome">Welcome! I am a Seattle based software developer.<br>I am also an excellent baker, and can quote the West Wing verbatim.</p>
         <a href="about.html">About </a> | <a href="contact.html"> Contact</a>
-      </div>
+        </div>
 
-      <div class="container">
+        <!--<div class="container">-->
       </div><!-- /container -->
 
-    </div><!-- /jumbotron -->
+    <!--</div> /jumbotron -->
 
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 portfolio">
           <h2>Portfolio Concept</h2>
           <p>I currently work as a non-profit manager, doing a little bit of everything, including the design and basic build out of web pages. My portfolio will primarily focus on new work, as development is a whole new ballgame.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /col -->
-        <div class="col-md-4">
+        <div class="col-md-4 project-goals">
           <h2>Project Goals</h2>
           <p>Though my expected graduation date is May 19, 2017 - my goal is to finish this course no later than May 1, almost three weeks ahead of schedule. As I work full-time, I plan to commit 20 - 25 hours per week to studying.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div><!-- /col -->
-        <div class="col-md-4">
+        <div class="col-md-4 course-goals">
           <h2>Course Goals</h2>
           <p>I am using this course so that I can change careers. Seattle is a huge tech hub, and I want in on the fun! After this course, my goal is to be hired as a junior developer, preferrably front-end. Eventually, I'd like to be able to freelance.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
