--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="css/about_style.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <title>Emily Chadwick</title>
 
@@ -20,7 +20,7 @@
 
   <body class="body-about">
 
-    <div class="nav-about">
+    <div class="nav">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
@@ -28,10 +28,9 @@
         <li><a href="#">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-
     </div><!--end nav-->
 
-    <div class="container-about">
+    <div class="about-image">
 
       <div class="header-about">
         <h1>About Me</h1>
@@ -43,21 +42,19 @@
 
     </div> <!--end container -->
 
-    <div class="row-about">
+    <div class="container">
+      <div class="row-about">
+        <div class="intro-about col-xs-12 col-s-6 col-md-6 col-lg-6">
+          <div class="about-col">
+            <h2>Hi, there.</h2>
+            <p>I'm Emily, a Seattle based web-developer. I am currently a student at Career Foundry, where I am improving my web development skills each day, and plan to use my prior experience and new knowledge to land a job as a junior web developer.</p>
+          </div><!--about-col-->
+        </div> <!--end intro-->
+      </div><!--row-about-->
 
-      <div class="intro column-about">
-        <h2>Hi, there.</h2>
-
-        <!-- <p>Just a little text.</p> -->
-
-        <p>I'm Emily, a Seattle based web-developer. I am currently a student at Career Foundry, where I am improving my web development skills each day, and plan to use my prior experience and new knowledge to land a job as a junior web developer.</p>
-
-      </div> <!--end intro-->
-
-      <div class="skills column-about">
-
-        <h3>Things I'm Good At</h3>
-
+      <div class="skills-about col-xs-12 col-s-6 col-md-6 col-lg-6">
+        <div class="about-col">
+          <h2>Things I'm Good At</h3>
           <ul id="skills-list">
             <li>Web Development</li>
             <li>Photoshop</li>
@@ -67,21 +64,17 @@
             <li>Budget and Timeline Management</li>
             <li>Leadership</li>
           </ul><!--end skill list-->
-
+        </div><!--end about-col-->
       </div><!--end skills-->
 
     </div><!--end row-about-->
 
-      <div class="main-text">
+      <div class="container-fluid main-text">
         <h3>Still Interested?</h3>
 
           <p>I currently work in field known as association management, which is management for non-profit organizations. As a manager, I approve website designs, email templates, plan events, and more. While I enjoy the work that I do, there was a small, but nagging voice in the back of my head telling me that I didn't just need to approve websites, but that I could create them! I didn't need to make content for emails and newsletters, I could code how they looked. So, I decided to take the leap.</p>
 
           <p>When not at work, or studying for my new career, I like to stay active! Living in Seattle brings all sorts of perks, including great hiking and biking trails, an easily accesible coast, and great craft ciders. I'm also an avid (and excellent) baker, love old-school hip-hop, and can quote the West Wing from start to finish.<p>
-
-      <div class="back">
-        <h6><a href="index.html">Back to Main</a> | <a href="contact.html">Contact</a></h6>
-      </div>
 
       </div><!--end main-text-->
 
