--- a/faq.html
+++ b/faq.html
@@ -21,6 +21,17 @@
 
 <body class="body-faq">
 
+  <div class="nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="#">FAQs</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+
+  </div><!--end nav-->
+
   <div class="main-faq">
     <h1>FAQs</h1>
   </div> <!--end main faq-->
@@ -117,12 +128,6 @@
       </div> <!-- end collapseFive-->
     </div> <!--end panel default-->
   </div> <!--end panel group-->
-
-  <div class="back">
-    <h6>
-      <a href="index.html">Back to Main</a> | <a href="contact.html">Contact</a> | <a href="about.html">About</a>
-    </h6>
-  </div>
 
     <!-- All your JavaScript comes now -->
     <!-- ============================= -->
