--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
     <div class="container">
       <!-- Example row of columns -->
-      <div class="row">
+      <div class="row-index">
         <div class="col-xs-12 col-s-6 col-md-4 col-lg-4 portfolio">
           <div class="intro-home">
           <h2>Portfolio Concept</h2>
-            <p>I currently work as a non-profit manager, doing a little bit of everything, including the design and basic build out of web pages and marketing communications. My portfolio will primarily focus on new work, as development is a whole new ballgame.</p>
+            <p>I currently work as a non-profit manager, doing a little bit of everything, including the design and basic build out of web pages and communications. My portfolio will primarily focus on new work, as development is a whole new ballgame.</p>
             <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--intro-home-->
         </div><!-- /col -->
