--- a/contact.html
+++ b/contact.html
@@ -37,45 +37,38 @@
 
     </div><!--end nav-->
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="main-contact">
+    <div class="container-fluid">
 
-      <div class="box-contact">
+    <div class="contact-image">
+
+      <div class="header-contact">
         <h1>Let's Chat</h1>
       </div>
 
-      <div class="box-contact">
-      </div><!-- /container -->
+    </div><!--contact-image-->
 
-    </div><!-- /jumbotron -->
+    <div class="container">
+      <div class="row-contact">
+        <div class="together-contact col-xs-12 col-s-6 col-md-6 col-lg-6">
+          <div class="contact-column">
+            <h2>Why Work Together?</h2>
+            <p>As an individual new to the world of web development, I see opportunities for improvement where others may not. While I'm not an expert in the field, I have a drive to learn, an excitement for success, and a great attitude. Let's chat about opportunities for web developer jobs or freelance work.</p>
+          </div><!--contact-column-->
+        </div><!-- /col -->
 
-    <div class="row-contact">
+        <div class="connect-contact col-xs-12 col-s-6 col-md-6 col-lg-6">
+          <div class="contact-column">
+            <h2>Connect</h2>
+              <span class="glyphicon glyphicon-envelope"></span> emilyann.chadwick@gmail.com<br>
+              <p><span class="glyphicon glyphicon-phone-alt"></span> (206) 359-5393</p>
+              <span class="glyphicon glyphicon-map-marker"></span> Seattle, WA<br>
+          </div><!--contact-column-->
+        </div><!-- /col -->
+      </div><!--row-contact -->
+    </div><!--end container-->
+    </div><!--container-fluid-->
 
-      <div class="together-contact column-contact">
-        <h2>Why Work Together?</h2>
-        <p>As an individual new to the world of web development, I see opportunities for improvement where others may not. While I'm not an expert in the field, I have a drive to learn, an excitement for success, and a great attitude. Let's connect about freelance opportunities, web consulting, or whatever you'd like!</p>
-
-      </div><!-- /col -->
-
-      <div class="connect-contact column-contact">
-        <h2>Connect</h2>
-        <span class="glyphicon glyphicon-envelope"></span> emilyann.chadwick@gmail.com<br>
-        <p><span class="glyphicon glyphicon-phone-alt"></span> (206) 359-5393</p>
-        <span class="glyphicon glyphicon-map-marker"></span> Seattle, WA<br>
-        <p> United States</p>
-
-      </div><!-- /col -->
-
-    </div><!--row -->
-
-      <!-- <div class="back">
-        <h6><a href="index.html">Back to Main </a>
-        |
-        <a href="about.html"> About</a></h6>
-
-      </div> --> <!--back-->
-
-    <!-- ============================= -->
+    <!--============================= -->
     <!-- All your JavaScript comes now -->
     <!-- ============================= -->
 
