--- a/index.html
+++ b/index.html
@@ -25,16 +25,32 @@
   </head>
 
   <body data-spy="scroll" data-target=".navbar">
+    <!--navbar starts here-->
 
-    <div class="nav navbar">
-        <ul>
-          <li><a href="#index">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#faq">FAQs</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-    </div><!--end nav-->
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <div class="emilyChadwick navbar-brand">
+              <a href="#">Emily Chadwick</a>
+            </div> <!--end emilyChadwick-->
+          </div> <!--end navbar-header-->
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#index">Home</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#faq">FAQs</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div> <!--end nav collapse-->
+        </div> <!--end container-fluid-->
+      </nav> --> <!--end nav-->
 
     <!--index-->
 
@@ -44,26 +60,26 @@
 
         <!--Indicators-->
         <ol class="carousel-indicators">
-          <li data-target="#bridge" data-slide-to="0" class="active"></li>
-          <li data-target="#girl-book" data-slide-to="1" class="active"></li>
-          <li data-target="#retro-car" data-slide-to="2" class="active"></li>
+          <li data-target="#field" data-slide-to="0" class="active"></li>
+          <li data-target="#bridge" data-slide-to="1" class="active"></li>
+          <li data-target="#road" data-slide-to="2" class="active"></li>
         </ol> <!--end carousel-indicators-->
 
         <!--Wrapper for slides-->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="img/bridge.jpg" alt="Brooklyn Bridge">
+            <img src="img/green-field.jpg" alt="field">
             <div class="carousel-caption">
             </div>
           </div>
 
           <div class="item">
-            <img src="img/girl-book.jpg" alt="Girl with Book">
+            <img src="img/sunset-bridge.jpg" alt="bridge">
             <div class="carousel-caption">
             </div>
           </div>
           <div class="item">
-            <img src="img/retro-car.jpg" alt="Slugbug">
+            <img src="img/night-road.jpg" alt="road">
             <div class="carousel-caption">
             </div>
           </div>
@@ -79,10 +95,14 @@
           <span class="sr-only">Next</span>
         </a>
 
+        <h1>Emily Chadwick</h1>
+        <h4>I am a Seattle based software developer.<br>
+        I am also an excellent baker, and can quote the West Wing line for line.</h4>
+
       </div>
 
-      <h1>Emily Chadwick</h1>
-        <p id="welcome">Welcome! I am a Seattle based software developer.<br>I am also an excellent baker, and can quote the West Wing verbatim.</p>
+      <!--<h1>Emily Chadwick</h1>
+        <p id="welcome">Welcome! I am a Seattle based software developer.<br>I am also an excellent baker, and can quote the West Wing verbatim.</p>-->
 
         <!--<div class="container">-->
     </div><!-- /container-fluid -->
@@ -116,7 +136,7 @@
 
     <!--portfolio-->
 
-    <div class="container-fluid container-work" id="portfolio">
+    <div class="container-fluid container-work anchor" id="portfolio">
       <h1>Work</h1>
       <div class="row" id="work">
 
@@ -177,7 +197,7 @@
 
     <!--about-->
 
-    <div class="container-fluid" id="about">
+    <div class="container-fluid anchor" id="about">
 
       <div class="about-image">
         <div class="header-about">
@@ -225,7 +245,7 @@
 
     <!--FAQ-->
 
-    <div class="container-fluid" id="faq">
+    <div class="container-fluid anchor" id="faq">
 
       <div class="main-faq">
         <h1>FAQs</h1>
@@ -325,9 +345,9 @@
 
     <!--contact-->
 
-    <div class="container-fluid" id="contact">
+    <div class="container-fluid anchor">
 
-      <div class="contact-image">
+      <div class="contact-image" id="contact">
         <div class="header-contact">
           <h1>Let's Chat</h1>
         </div>
@@ -368,6 +388,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <!-- Can place script tags with JavaScript files here -->
+
+    <script type="text/javascript">
+      var $root =$('html, body');
+      $('navbar-nav a').click(function() {
+        var href = $.attr(this, 'href');
+        $root.animate ({
+          scrollTop: $(href).offset ().top
+        }, 500, function () {
+          window.location.hash=href;
+        });
+        return false;
+      });
+    </script>
 
   </body>
 </html>
