--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
               <span class="icon-bar"></span>
             </button>
             <div class="emilyChadwick navbar-brand">
-              <a href="#">Emily Chadwick</a>
+              <a href="#">Home</a>
             </div> <!--end emilyChadwick-->
           </div> <!--end navbar-header-->
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#index">Home</a></li>
+              <!--<li><a href="#index">Home</a></li>-->
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#faq">FAQs</a></li>
@@ -96,13 +96,10 @@
         </a>
 
         <h1>Emily Chadwick</h1>
-        <h4>I am a Seattle based software developer.<br>
-        I am also an excellent baker, and can quote the West Wing line for line.</h4>
+        <!--<h4>I am a Seattle based software developer.<br>
+        I am also an excellent baker, and can quote the West Wing line for line.</h4>-->
 
       </div>
-
-      <!--<h1>Emily Chadwick</h1>
-        <p id="welcome">Welcome! I am a Seattle based software developer.<br>I am also an excellent baker, and can quote the West Wing verbatim.</p>-->
 
         <!--<div class="container">-->
     </div><!-- /container-fluid -->
@@ -205,40 +202,51 @@
         </div> <!--end header -->
       </div> <!--about-image -->
 
+      <div class="container-fluid main-text">
+        <!--<h3>Still Interested?</h3>-->
+
+          <p>I currently work in field known as association management, which is management for non-profit organizations. As a manager, I approve website designs, email templates, plan events, and more. While I enjoy the work that I do, there was a small, but nagging voice in the back of my head telling me that I didn't just need to approve websites, but that I could create them! I didn't need to make content for emails and newsletters, I could code how they looked. So, I decided to take the leap.<br><br>
+
+          When not at work, or studying for my new career, I like to stay active! Living in Seattle brings all sorts of perks, including great hiking and biking trails, an easily accesible coast, and great craft ciders. I'm also an avid (and excellent) baker, love old-school hip-hop, and can quote the West Wing from start to finish.</p>
+
+      </div><!--end main-text-->
+
       <div class="about-text">
-        <div class="row-about">
-          <div class="intro-about col-xs-12 col-s-6 col-md-6 col-lg-6">
-            <div class="about-col">
-              <h2>Hi, there.</h2>
-              <p>I'm Emily, a Seattle based web-developer. I am currently a student at Career Foundry, where I am improving my web development skills each day, and plan to use my prior experience and new knowledge to land a job as a junior web developer.</p>
-            </div><!--about-col-->
-          </div> <!--end intro-->
-        </div><!--row-about-->
 
         <div class="skills-about col-xs-12 col-s-6 col-md-6 col-lg-6">
           <div class="about-col">
-            <h2>Things I'm Good At</h2>
+            <h2>I'm good at:</h2>
             <ul id="skills-list" style="list-style:none">
-              <li>Web Development</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
               <li>Photoshop</li>
               <li>Project Management</li>
               <li>Relationship Management</li>
               <li>Event Planning</li>
               <li>Budget and Timeline Management</li>
               <li>Leadership</li>
-            </ul><!--end skill list-->
+            </ul> <!--end skill list-->
           </div><!--end about-col-->
         </div><!--end skills-->
       </div><!--end row-about-->
 
-      <div class="container-fluid main-text">
-        <h3>Still Interested?</h3>
+        <div class="row-about">
+          <div class="intro-about col-xs-12 col-s-6 col-md-6 col-lg-6">
+            <div class="about-col">
+              <h2>I still want to learn:</h2>
+              <ul id="learn-list" style="list-style:none">
+                <li>JavaScript</li>
+                <li>Ruby on Rails</li>
+                <li>Angular</li>
+                <li>React</li>
+                <li>More about Git and GitHub</li>
+                <li>Anything else that will help me succeed!</li>
+              </ul><!--end learn-list-->
+            </div><!--end about col-->
+          </div> <!--end intro-->
+        </div> <!--end row-about-->
 
-          <p>I currently work in field known as association management, which is management for non-profit organizations. As a manager, I approve website designs, email templates, plan events, and more. While I enjoy the work that I do, there was a small, but nagging voice in the back of my head telling me that I didn't just need to approve websites, but that I could create them! I didn't need to make content for emails and newsletters, I could code how they looked. So, I decided to take the leap.</p>
-
-          <p>When not at work, or studying for my new career, I like to stay active! Living in Seattle brings all sorts of perks, including great hiking and biking trails, an easily accesible coast, and great craft ciders. I'm also an avid (and excellent) baker, love old-school hip-hop, and can quote the West Wing from start to finish.</p>
-
-      </div><!--end main-text-->
     </div><!--end container-fluid-->
 
     <!--end about-->
@@ -350,29 +358,31 @@
       <div class="contact-image" id="contact">
         <div class="header-contact">
           <h1>Let's Chat</h1>
+          <h4><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:emilyann.chadwick@gmail.com">emilyann.chadwick@gmail.com</a><br>
+          <span class="glyphicon glyphicon-phone-alt"></span> (206) 359-5393</h4>
         </div>
       </div><!--contact-image-->
 
-      <div class="main-contact">
+      <!--<div class="main-contact">
         <div class="row-contact">
           <div class="together-contact col-xs-12 col-s-6 col-md-6 col-lg-6">
             <div class="contact-column">
               <h2>Why Work Together?</h2>
                 <p>As an individual new to the world of web development, I see opportunities for improvement where others may not. While I'm not an expert in the field, I have a drive to learn, an excitement for success, and a great attitude. Let's chat about opportunities for web developer jobs or freelance work.</p>
-            </div><!--contact-column-->
-          </div><!-- /col -->
+            </div>--> <!--contact-column-->
+          <!--</div>--><!-- /col -->
 
-          <div class="connect-contact col-xs-12 col-s-6 col-md-6 col-lg-6">
+          <!--<div class="connect-contact col-xs-12 col-s-6 col-md-6 col-lg-6">
             <div class="contact-column">
               <h2>Connect</h2>
                 <span class="glyphicon glyphicon-envelope"></span> emilyann.chadwick@gmail.com<br>
                 <p><span class="glyphicon glyphicon-phone-alt"></span> (206) 359-5393</p>
                 <span class="glyphicon glyphicon-map-marker"></span> Seattle, WA<br>
-            </div><!--contact-column-->
-          </div><!-- /col -->
-        </div><!--row-contact -->
-      </div><!--end main-contact-->
-    </div><!--container-fluid-->
+            </div> --><!--contact-column-->
+          <!--</div>--><!-- /col -->
+        <!--</div>--><!--row-contact -->
+      <!--</div>--><!--end main-contact-->
+    <!--</div>--><!--container-fluid-->
 
     <!--end contact-->
 
