--- a/index.html
+++ b/index.html
@@ -328,6 +328,22 @@
 
     <!--end contact-->
 
+    <!--footer-->
+
+    <footer>
+
+      <div class="icons">
+
+      <span class="copy">&copy;</span>
+
+      <a href="https://twitter.com/emilykaseberg" class="twitter-follow-button" data-show-count="false">Follow me: @emilykaseberg</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcareerfoundry%2F&width=96&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId" width="96" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+
+      </div>
+
+    </footer>
+
 
     <!-- ============================= -->
     <!-- All your JavaScript comes now -->
@@ -353,6 +369,8 @@
         return false;
       });
     </script>
+
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
   </body>
 </html>
