Lesson 2.1 still not quite how I want it

--- a/index.html
+++ b/index.html
@@ -329,20 +329,21 @@
     <!--end contact-->
 
     <!--footer-->
+    <div class="container-fluid">
 
-    <footer>
+      <footer>
 
-      <div class="icons">
+          <div class="icon">&copy;</div>
 
-      <span class="copy">&copy;</span>
+          <div class="icon"><a href="https://twitter.com/emilykaseberg" class="twitter-follow-button" data-show-count="false">Follow @emilykaseberg</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></div>
 
-      <a href="https://twitter.com/emilykaseberg" class="twitter-follow-button" data-show-count="false">Follow me: @emilykaseberg</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <div class="icon"><iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcareerfoundry%2F&width=96&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId" width="auto" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe></div>
 
-      <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fcareerfoundry%2F&width=96&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId" width="96" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+          <iframe width="300" height="auto" src="https://www.youtube.com/embed/hT8UZ8Y_GM0" frameborder="0" allowfullscreen></iframe>
 
-      </div>
+      </footer>
 
-    </footer>
+    </div>
 
 
     <!-- ============================= -->
